--- a/packages/terre2/assets/templates/WebGAL_Template/index.html
+++ b/packages/terre2/assets/templates/WebGAL_Template/index.html
@@ -78,14 +78,14 @@
         width: 100%;
         flex-flow: column;
         align-items: center ">
-        <div style="padding: 0 0 0.25em 0">
+        <!-- <div style="padding: 0 0 0.25em 0">
           Powered by <a href="https://github.com/MakinoharaShoko/WebGAL"
             onclick="jump(event, 'https://github.com/MakinoharaShoko/WebGAL')">WebGAL</a> Framework
         </div>
         <div>
           Made with ❤ by <a href="https://github.com/MakinoharaShoko"
             onclick="jump(event, 'https://github.com/MakinoharaShoko')">Mahiru</a>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
