--- a/packages/terre2/assets/templates/WebGAL_Template/index.html
+++ b/packages/terre2/assets/templates/WebGAL_Template/index.html
@@ -6,7 +6,7 @@
   <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png">
   <link rel="manifest" href="./manifest.json" />
   <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
-  <title>WebGAL</title>
+  <title>idoltime</title>
   <script type="module" crossorigin src="./assets/index-99adfccc.js"></script>
   <link rel="stylesheet" href="./assets/index-d935d359.css">
 </head>
