--- a/packages/terre2/assets/templates/WebGAL_Template/index.html
+++ b/packages/terre2/assets/templates/WebGAL_Template/index.html
@@ -6,7 +6,7 @@
   <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png">
   <link rel="manifest" href="./manifest.json" />
   <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
-  <title>WebGAL</title>
+  <title>IdolTime</title>
   <script type="module" crossorigin src="./assets/index-99adfccc.js"></script>
   <link rel="stylesheet" href="./assets/index-d935d359.css">
 </head>
@@ -69,22 +69,6 @@
             font-size: 175%;
 ">
           PRESS THE SCREEN TO START
-        </div>
-      </div>
-      <div style="position: absolute;
-        bottom: 1em;
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        flex-flow: column;
-        align-items: center ">
-        <div style="padding: 0 0 0.25em 0">
-          Powered by <a href="https://github.com/MakinoharaShoko/WebGAL"
-            onclick="jump(event, 'https://github.com/MakinoharaShoko/WebGAL')">WebGAL</a> Framework
-        </div>
-        <div>
-          Made with ❤ by <a href="https://github.com/MakinoharaShoko"
-            onclick="jump(event, 'https://github.com/MakinoharaShoko')">Mahiru</a>
         </div>
       </div>
     </div>
