--- a/packages/terre2/assets/templates/WebGAL_Template/index.html
+++ b/packages/terre2/assets/templates/WebGAL_Template/index.html
@@ -7,8 +7,8 @@
   <link rel="manifest" href="./manifest.json" />
   <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
   <title>IdolTime</title>
-  <script type="module" crossorigin src="./assets/index-99adfccc.js"></script>
-  <link rel="stylesheet" href="./assets/index-d935d359.css">
+  <script type="module" crossorigin src="./assets/index-46b58af0.js"></script>
+  <link rel="stylesheet" href="./assets/index-3d009f89.css">
 </head>
 
 <body>
@@ -172,12 +172,14 @@
       };
     } else {
       // ios
-      // 创建一个新的 meta 标签
       const meta = document.createElement('meta');
       meta.name = "viewport";
-      meta.content = "width=device-width, initial-scale=0.2, minimum-scale=0.01, maximum-scale=1";
-      // 将该标签添加到 head 中
+      meta.content = "width=device-width, initial-scale=0.22, minimum-scale=0.01, maximum-scale=1";
       document.getElementsByTagName('head')[0].appendChild(meta);
+      const style = document.createElement('style');
+      style.type = 'text/css';
+      style.textContent = '* { font-synthesis: none !important; }';
+      document.head.appendChild(style);
     }
 
   </script>
