--- a/packages/terre2/assets/templates/WebGAL_Template/index.html
+++ b/packages/terre2/assets/templates/WebGAL_Template/index.html
@@ -7,14 +7,14 @@
   <link rel="manifest" href="./manifest.json" />
   <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
   <title>IdolTime</title>
-  <script type="module" crossorigin src="./assets/index-9955e190.js"></script>
-  <link rel="stylesheet" href="./assets/index-4b57761a.css">
+  <script type="module" crossorigin src="./assets/index-9e760aaf.js"></script>
+  <link rel="stylesheet" href="./assets/index-d1862495.css">
 </head>
 
 <body>
   <!--快速显示落地页，让用户感知不到加载的过程-->
   <div id="ebg"></div>
-  <div id="Title_enter_page" onclick="enter()" style="
+  <div id="Title_enter_page" style="
             width: 2560px;
             height: 1440px;
             overflow: hidden;
@@ -29,7 +29,6 @@
     height: 100%;
     width: 100%;
     position: absolute;
-    background: linear-gradient(135deg, #fdfbfb 0%, #ebedee 100%);
     top: 0;
     opacity: 1;
     transition: opacity 1s;
@@ -40,42 +39,26 @@
     height: 100%;
     position: absolute;
     top: 0;
-    opacity: 0;
-    background: linear-gradient(165deg,rgba(255,255,255,0.25) 0%,rgba(255,255,255,1) 50%,rgba(255,255,255,0.25) 100%);
-    transition: opacity 1s;
 "></div>
-    <!--    落地页文字-->
-    <div id="Title_enter_text" style="width: 100%;
-    position: absolute;
-    top: 0;
-    height: 100%;
-    opacity: 1;
-    font-size: 175%;
-    transition: opacity 1s;
-    z-index: 15;
-    font-family: '思源宋体',Georgia,serif">
-      <div class="toCenter" style="
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-">
-        <div class="StartButton" style="
-            letter-spacing: 0.25em ;
-            padding: 2em 2em 2em 2em;
-            text-shadow: 0 0 30px rgba(0,0,0,0.5);
-            transition: text-shadow 1s;
-            font-size: 175%;
-">
-          PRESS THE SCREEN TO START
-        </div>
+    <!-- 落地页视频 -->
+    <div id="Title_enter_text" style="width: 100%; height: 100%;">
+      <div class="toCenter" style="width: 100%; height: 100%;">
+        <video id="loadingVideo" width="100%" autoplay muted>
+          <source src="./assets/enter_page_video-8790e1b1.mp4" type="video/mp4">
+        </video>
       </div>
     </div>
   </div>
   <div id="panic-overlay"> <!-- 紧急回避 --> </div>
   <div id="root"></div>
   <script>
+
+    const video = document.getElementById('loadingVideo');  
+    video.addEventListener('ended', function() {  
+        // 当视频播放完成后执行 ,进入引擎主界面
+        enter()
+    }, false);  
+
     /**
      * 在窗口大小改变时进行强制缩放
      */
