--- a/packages/origine2/src/pages/editor/GraphicalEditor/SentenceEditor/sentenceEditor.module.scss
+++ b/packages/origine2/src/pages/editor/GraphicalEditor/SentenceEditor/sentenceEditor.module.scss
@@ -7,7 +7,7 @@
 .editItem {
   display: flex;
   //align-items: center;
-  align-items: stretch;
+  align-items: center;
   // margin: 4px 0 0 0;
   width: 100%;
   flex-wrap: wrap;
