--- a/packages/terre2/assets/templates/WebGAL_Template/index.html
+++ b/packages/terre2/assets/templates/WebGAL_Template/index.html
@@ -58,7 +58,7 @@
       }
     }
   </style>
-  <script type="module" crossorigin src="./assets/index-bb0e28b1.js"></script>
+  <script type="module" crossorigin src="./assets/index-40a6a755.js"></script>
   <link rel="stylesheet" href="./assets/index-2faf5254.css">
 </head>
 
@@ -328,15 +328,15 @@
     }
 
     function show() {
-      // title.style.opacity = 0;
-      // setTimeout(() => {
-      //   if (title) {
-      //     title.style.display = "none";
-      //     title.remove();
-      //   }
-      // }, 2000); // 将落地页设置为不显示
-      // window.enterPromise();
-      // delete window.enterPromise;
+      title.style.opacity = 0;
+      setTimeout(() => {
+        if (title) {
+          title.style.display = "none";
+          title.remove();
+        }
+      }, 2000); // 将落地页设置为不显示
+      window.enterPromise();
+      delete window.enterPromise;
     }
 
     function setProgress(num, width, height) {
