feature: 成就系统功能开发

--- a/packages/terre2/assets/templates/WebGAL_Template/index.html
+++ b/packages/terre2/assets/templates/WebGAL_Template/index.html
@@ -7,8 +7,8 @@
   <link rel="manifest" href="./manifest.json" />
   <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
   <title>IdolTime</title>
-  <script type="module" crossorigin src="./assets/index-2423df1f.js"></script>
-  <link rel="stylesheet" href="./assets/index-c0aab2b4.css">
+  <script type="module" crossorigin src="./assets/index-81090ebb.js"></script>
+  <link rel="stylesheet" href="./assets/index-ec52e7da.css">
 </head>
 
 <body>
@@ -81,6 +81,12 @@
      */
     const ua = navigator.userAgent;
     const isIOSDevice = !!ua.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/);
+    function isSafari() {
+      const ua = navigator.userAgent.toLowerCase();
+      return ua.includes('safari') && !ua.includes('chrome') && !ua.includes('android');
+    }
+    window.isSafari = isSafari();
+    window.isIOSDevice = isIOSDevice;
     function resize() {
       const targetHeight = 1440;
       const targetWidth = 2560;
@@ -180,6 +186,11 @@
       style.type = 'text/css';
       style.textContent = '* { font-synthesis: none !important; }';
       document.head.appendChild(style);
+      const root = document.getElementById('root');
+      root.style.position = 'absolute';
+      root.style.left = '50%';
+      root.style.top = '50%';
+      root.style.transform = 'translate(-50%,-50%)';
     }
 
   </script>
@@ -189,7 +200,7 @@
      */
     const u = navigator.userAgent;
     const isIOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); // 判断是否是 iOS终端
-    if ("serviceWorker" in navigator && !isIOS) {
+    if ("serviceWorker" in navigator) {
       navigator.serviceWorker.register("./webgal-serviceworker.js").then(function (reg) {
         // registration worked
         console.log("Registration succeeded. Scope is " + reg.scope);
