--- a/packages/origine2/src/pages/dashboard/dashboard.module.scss
+++ b/packages/origine2/src/pages/dashboard/dashboard.module.scss
@@ -8,7 +8,7 @@
 
 .dashboard_main {
   width: 100%;
-  height: calc(100vh - 4.5em);
+  height: calc(100vh - 9em);
   display: flex;
   flex-grow: 1;
   overflow: hidden;
@@ -19,7 +19,7 @@
 }
 
 .topBar {
-  padding: 0 16px;
+  padding: 8px  16px;
   font-family: Georgia, serif;
   font-size: 150%;
   color: var(--primary);
