--- a/packages/terre2/assets/templates/IdolTime_Template/index.html
+++ b/packages/terre2/assets/templates/IdolTime_Template/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hans">
 <head>
   <meta charset="UTF-8"/>
-  <link rel="icon" type="image/x-icon" href="./icons/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="./icons/favicon.ico" id="dynamic-favicon" />
   <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png">
   <link rel="manifest" href="./manifest.json" />
   <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
@@ -41,7 +41,7 @@
 
     window.pubsub = new PubSub();
   </script>
-  <script type="module" crossorigin src="./assets/index-65244789.js"></script>
+  <script type="module" crossorigin src="./assets/index-a84a165c.js"></script>
   <link rel="stylesheet" href="./assets/index.css">
 </head>
 
