--- a/packages/terre2/assets/templates/IdolTime_Template/index.html
+++ b/packages/terre2/assets/templates/IdolTime_Template/index.html
@@ -58,7 +58,7 @@
       }
     }
   </style>
-  <script type="module" crossorigin src="./assets/index-d380c9e9.js"></script>
+  <script type="module" crossorigin src="./assets/index-fdaeb638.js"></script>
   <link rel="stylesheet" href="./assets/index.css">
 </head>
 
@@ -361,11 +361,15 @@
       const percentage = textWrapper.getElementsByTagName('span')[0];
       percentage.innerText = num.toFixed(0) + '%';
     }
-
-    const dispose = window.pubsub.subscribe('sceneAssetsLoaded', ({ sceneName }) => {
-      if (sceneName === 'start.txt') {
-        dispose();
-        if (!progressTimerRef.current) {
+    let loadedRef = {
+      assets: false,
+      gameInfo: false,
+    }
+    const callback1 = () => {
+      if (!loadedRef.assets || !loadedRef.gameInfo) {
+        return;
+      }
+      if (!progressTimerRef.current) {
           downloadCompleteRef.current = 1;
         } else {
           clearTimeout(progressTimerRef.current);
@@ -374,7 +378,20 @@
             show();
           }, 500);
         }
+    }
+
+    const dispose = window.pubsub.subscribe('sceneAssetsLoaded', ({ sceneName }) => {
+      if (sceneName === 'start.txt') {
+        dispose();
+        loadedRef.assets = true;
+        callback1();
       }
+    })
+
+    const dispose2 = window.pubsub.subscribe('gameInfoReady', () => {
+      dispose2();
+      loadedRef.gameInfo = true;
+      callback1();
     })
 
     let enterPromise = new Promise(res => window.enterPromise = res);
