--- a/packages/terre2/assets/templates/IdolTime_Template/index.html
+++ b/packages/terre2/assets/templates/IdolTime_Template/index.html
@@ -54,11 +54,11 @@
       line-height: 44px;
 
       span {
-        margin-left: 30px
+        margin-left: 30px;
       }
     }
   </style>
-  <script type="module" crossorigin src="./assets/index-fdaeb638.js"></script>
+  <script type="module" crossorigin src="./assets/index-53c58eaf.js"></script>
   <link rel="stylesheet" href="./assets/index.css">
 </head>
 
