--- a/packages/origine2/src/pages/editor/Topbar/tabs/ViewConfig/viewTab.module.scss
+++ b/packages/origine2/src/pages/editor/Topbar/tabs/ViewConfig/viewTab.module.scss
@@ -44,10 +44,10 @@
 }
 
 .optionLabel {
-  margin-right: 20px;
   font-weight: 500;
   font-size: 16px;
   width: 70px;
+  text-align: right;
 }
 
 .row {
