--- a/packages/origine2/src/pages/editor/Topbar/tabs/ViewConfig/viewTab.module.scss
+++ b/packages/origine2/src/pages/editor/Topbar/tabs/ViewConfig/viewTab.module.scss
@@ -37,10 +37,11 @@
 }
 
 .label {
-  margin-right: 20px;
+  // margin-right: 20px;
   font-weight: 500;
   font-size: 16px;
   width: 125px;
+  flex-shrink: 0;
 }
 
 .optionLabel {
@@ -54,7 +55,13 @@
   display: flex;
   align-items: center;
   margin-top: 12px;
-  gap: 12px;
+  gap: 10px;
+  padding: 2px;
+  border-radius: 3px;
+  &:hover {
+    background-color: #eee;
+    
+  }
 }
 
 .dialogContent {
