--- a/packages/terre2/assets/templates/IdolTime_Template/index.html
+++ b/packages/terre2/assets/templates/IdolTime_Template/index.html
@@ -25,10 +25,10 @@
         --options_checkbox_720P_top: calc(266px*2);
         --options_checkbox_720P_left: calc(640px*2);
 
-        --options_light_slider_top: 890px;
+        --options_light_slider_top: 750px;
         --options_light_slider_left: 1244px;
 
-        --options_sound_slider_top: 750px;
+        --options_sound_slider_top: 890px;
         --options_sound_slider_left: 1244px;
 
         --options_light_main_top: 1020px;
@@ -69,7 +69,7 @@
 
     window.pubsub = new PubSub();
   </script>
-  <script type="module" crossorigin src="./assets/index-ef27b9c3.js"></script>
+  <script type="module" crossorigin src="./assets/index-7021e1d0.js"></script>
   <link rel="stylesheet" href="./assets/index.css">
 </head>
 
@@ -289,7 +289,7 @@
         rootEle.style.setProperty('--options_checkbox_top', `${239 * MS}px`);
         rootEle.style.setProperty('--options_checkbox_left', `${441 * MS}px`);
 
-        rootEle.style.setProperty('--options_checkbox_window_top', `${218 * MSTop}px`);
+        rootEle.style.setProperty('--options_checkbox_window_top', `728px`);
         rootEle.style.setProperty('--options_checkbox_window_left', `${661 * MS}px`);
 
         rootEle.style.setProperty('--options_checkbox_1080P_top', `${266 * MSTop}px`);
@@ -298,13 +298,13 @@
         rootEle.style.setProperty('--options_checkbox_720P_top', `${266 * MSTop}px`);
         rootEle.style.setProperty('--options_checkbox_720P_left', `${640 * MS}px`);
 
-        rootEle.style.setProperty('--options_light_slider_top', `${445 * MS}px`);
+        rootEle.style.setProperty('--options_light_slider_top', `1148px`);
         rootEle.style.setProperty('--options_light_slider_left', `${622 * MS}px`);
 
-        rootEle.style.setProperty('--options_sound_slider_top', `${375 * MS}px`);
+        rootEle.style.setProperty('--options_sound_slider_top', `1370px`);
         rootEle.style.setProperty('--options_sound_slider_left', `${622 * MS}px`);
 
-        rootEle.style.setProperty('--options_light_main_top', `${510 * MS}px`);
+        rootEle.style.setProperty('--options_light_main_top', `1577px`);
         rootEle.style.setProperty('--options_light_main_left', `${622 * MS}px`);
     }
 
