--- a/packages/terre2/assets/templates/IdolTime_Template/index.html
+++ b/packages/terre2/assets/templates/IdolTime_Template/index.html
@@ -6,6 +6,9 @@
   <link rel="icon" type="image/x-icon" href="./icons/favicon.ico" id="dynamic-favicon" />
   <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png">
   <link rel="manifest" href="./manifest.json" />
+  <!-- pre-sdk -->
+<link rel="stylesheet" href="https://pre-doc.moyibian.com/GcpWebSdk.min.css"
+type="text/css" />
   <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
   <title>IdolTime</title>
   <style>
@@ -86,7 +89,7 @@
       }
     }
   </style>
-  <script type="module" crossorigin src="./assets/index-cff1b027.js"></script>
+  <script type="module" crossorigin src="./assets/index-61ad304d.js"></script>
   <link rel="stylesheet" href="./assets/index.css">
 </head>
 
@@ -144,7 +147,7 @@
 
       <!-- loading page -->
       <div class="loading-page" style="
-          width: auto; 
+          width: auto;
           height: 100%;
           display: flex;
           justify-content: center;
@@ -387,6 +390,7 @@
     })
   </script>
   
+  <script src="https://pre-doc.moyibian.com/GcpWebSdk.min.js"></script>
   <!--<script type="module" src="/src/Core/util/resize.ts"></script>-->
   <!--<script src="lib/live2d.min.js"></script>-->
   <!--<script src="lib/live2dcubismcore.min.js"></script>-->
