--- a/packages/origine2/src/pages/editor/Topbar/tabs/ViewConfig/viewTab.module.scss
+++ b/packages/origine2/src/pages/editor/Topbar/tabs/ViewConfig/viewTab.module.scss
@@ -20,7 +20,7 @@
 .group {
   border-radius: 10px;
   border: 1px solid #eee;
-  padding: 10px 20px;
+  padding: 10px 5px;
   position: relative;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -54,9 +54,9 @@
 .row {
   display: flex;
   align-items: center;
-  margin-top: 12px;
+  // margin-top: 12px;
   gap: 10px;
-  padding: 2px;
+  padding: 6px 15px;
   border-radius: 3px;
   &:hover {
     background-color: #eee;
