fix: 美女图鉴UI自定义

--- a/packages/origine2/src/pages/editor/Topbar/tabs/ViewConfig/viewTab.module.scss
+++ b/packages/origine2/src/pages/editor/Topbar/tabs/ViewConfig/viewTab.module.scss
@@ -74,3 +74,10 @@
   display: flex;
   align-items: center;
 }
+
+.rowHover {
+  border-radius: 3px;
+  &:hover {
+    background-color: #eee;
+  }
+}
