--- a/packages/origine2/src/pages/dashboard/gameElement.module.scss
+++ b/packages/origine2/src/pages/dashboard/gameElement.module.scss
@@ -14,6 +14,14 @@
   box-shadow: var(--shadow-md);
 }
 
+.gameElement_main_local_label {
+  position: absolute;
+  padding: 5px 10px;
+  border-radius: var(--radius-md);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+}
+
 .gameElement_main:hover:has(.gameElement_action:hover) {
   background: none;
 }
