chore: 运行时bug修复

--- a/packages/terre2/assets/templates/IdolTime_Template/index.html
+++ b/packages/terre2/assets/templates/IdolTime_Template/index.html
@@ -80,13 +80,13 @@
       font-size: 36px;
       bottom: 3.5%;
       line-height: 44px;
+    }
 
-      span {
-        margin-left: 30px;
-      }
+    #updating-text span {
+      margin-left: 30px;
     }
   </style>
-  <script type="module" crossorigin src="./assets/index-ce85ea58.js"></script>
+  <script type="module" crossorigin src="./assets/index-fb1d645d.js"></script>
   <link rel="stylesheet" href="./assets/index.css">
 </head>
 
