--- a/packages/terre2/assets/templates/IdolTime_Template/index.html
+++ b/packages/terre2/assets/templates/IdolTime_Template/index.html
@@ -6,7 +6,10 @@
   <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png">
   <link rel="manifest" href="./manifest.json" />
   <!-- pre-sdk -->
-  <link rel="stylesheet" href="https://pre-doc.moyibian.com/GcpWebSdk.min.css"
+  <!-- <link rel="stylesheet" href="https://pre-doc.moyibian.com/GcpWebSdk.min.css"
+  type="text/css" /> -->
+  <!-- 正式服 -->
+  <link rel="stylesheet" href="https://1816489586.rsc.cdn77.org/web_sdk/GcpWebSdk.min.css"
   type="text/css" />
   <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
   <title>IdolTime</title>
@@ -346,7 +349,11 @@
     })
   </script>
   
-  <script src="https://pre-doc.moyibian.com/GcpWebSdk.min.js"></script>
+  <!-- pre -->
+  <!-- <script src="https://pre-doc.moyibian.com/GcpWebSdk.min.js"></script> -->
+  <!-- 正式服 -->
+  <script src="https://1816489586.rsc.cdn77.org/web_sdk/GcpWebSdk.min.js"></script>
+
   <!--<script type="module" src="/src/Core/util/resize.ts"></script>-->
   <!--<script src="lib/live2d.min.js"></script>-->
   <!--<script src="lib/live2dcubismcore.min.js"></script>-->
