chore: 动态配置sdk地址

--- a/packages/origine2/src/pages/editor/Topbar/tabs/topbarTabs.module.scss
+++ b/packages/origine2/src/pages/editor/Topbar/tabs/topbarTabs.module.scss
@@ -73,6 +73,12 @@
   //align-items: center;
 }
 
+.desText{
+  max-width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .editButton {
   //display: inline-block;
   font-size: smaller;
