--- a/packages/origine2/src/pages/editor/Topbar/tabs/topbarTabs.module.scss
+++ b/packages/origine2/src/pages/editor/Topbar/tabs/topbarTabs.module.scss
@@ -84,6 +84,12 @@
   margin: 0 0 0 0.25em;
 }
 
+.desText{
+  max-width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .editButton:hover{
   background: var(--primary-10pct);
 }
