--- a/packages/terre2/assets/templates/IdolTime_Template/index.html
+++ b/packages/terre2/assets/templates/IdolTime_Template/index.html
@@ -6,9 +6,9 @@
   <link rel="icon" type="image/x-icon" href="./icons/favicon.ico" id="dynamic-favicon" />
   <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png">
   <link rel="manifest" href="./manifest.json" />
-  <!-- pre-sdk -->
-<link rel="stylesheet" href="https://pre-doc.moyibian.com/GcpWebSdk.min.css"
-type="text/css" />
+    <!-- pre-sdk -->
+<!-- <link rel="stylesheet" href="https://pre-doc.moyibian.com/GcpWebSdk.min.css"
+type="text/css" /> -->
   <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
   <title>IdolTime</title>
   <style>
@@ -91,7 +91,7 @@ type="text/css" />
       margin-left: 30px;
     }
   </style>
-  <script type="module" crossorigin src="./assets/index-06849a87.js"></script>
+  <script type="module" crossorigin src="./assets/index-a11eff97.js"></script>
   <link rel="stylesheet" href="./assets/index.css">
 </head>
 
@@ -393,7 +393,7 @@ type="text/css" />
     })
   </script>
   
-  <script src="https://pre-doc.moyibian.com/GcpWebSdk.min.js"></script>
+  <!-- <script src="https://pre-doc.moyibian.com/GcpWebSdk.min.js"></script> -->
   <!--<script type="module" src="/src/Core/util/resize.ts"></script>-->
   <!--<script src="lib/live2d.min.js"></script>-->
   <!--<script src="lib/live2dcubismcore.min.js"></script>-->
