--- a/packages/terre2/assets/templates/IdolTime_Template/index.html
+++ b/packages/terre2/assets/templates/IdolTime_Template/index.html
@@ -36,8 +36,10 @@
 
         --options_light_main_top: 1020px;
         --options_light_main_left: 1244px;
+
     }
   </style>
+
   <script>
     function PubSub() {
       this.subscribers = {};
@@ -88,7 +90,7 @@
       margin-left: 30px;
     }
   </style>
-  <script type="module" crossorigin src="./assets/index-c896d8d9.js"></script>
+  <script type="module" crossorigin src="./assets/index-d036a008.js"></script>
   <link rel="stylesheet" href="./assets/index.css">
 </head>
 
@@ -146,7 +148,7 @@
 
       <!-- loading page -->
       <div class="loading-page" style="
-          width: auto;
+          width: auto; 
           height: 100%;
           display: flex;
           justify-content: center;
@@ -197,7 +199,9 @@
     /**
      * 在窗口大小改变时进行强制缩放
      */
-    const ua = navigator.userAgent;
+
+    const ua = navigator.userAgent || navigator.vendor || window.opera;
+    const isAndroidDevice = /android/i.test(ua);  // 检测安卓设备
     const isIOSDevice = !!ua.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/);
     function isSafari() {
       const ua = navigator.userAgent.toLowerCase();
@@ -320,6 +324,7 @@
           }, 100);
         }
       };
+      
     } else {
       // ios
       const meta = document.createElement('meta');
